Fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-body,
-html {
-  height: 100%;
+html, 
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
 }
 * {
   margin: 0;
@@ -97,6 +101,13 @@ nav ul li a {
   border-radius: 4px;
   margin-top: 15rem;
 }
+.heroBtn a{
+  color: #ffbf00;
+}
+.heroBtn a:hover{
+  color: white;
+  text-decoration:none;
+}
 button:hover {
   color: #001f3f;
   background-color: #ffbf00;
@@ -112,10 +123,6 @@ body {
   background: cover;
   background: #808000;
 }
-
-/* .about-wrapper {
-  height: 100vh;
-} */
 
 /* about */
 #about {
@@ -146,10 +153,7 @@ body {
   height:75vh;
   border-radius:20px;
 }
-#about img{
-    
-    
-}
+
 #about-col ul li {
   padding-top: 15px;
   color:white;
@@ -197,7 +201,6 @@ body {
    }
   
 }
-
 /* service */
 #service {
     padding-top: 80px;
@@ -216,6 +219,11 @@ body {
   
 
 //GALLERY
+@media only screen and (max-width: 768px){
+  .gallery-container{
+    width: 50%; 
+  }
+}
 .gallery-container {
     position: relative;
     display: flex;
@@ -284,17 +292,4 @@ body {
       text-decoration:none;
       color: orange;
   }
-  .card {
-    background:khaki;
-    border-radius: px;
-    color:black;
-    height: 50vh;
-  }
-  .container {
-    padding: 2px 16px;
-}.header {
-    height: 10%;
-    background: #808000;
-    color: white;
-    text-align: center;
-}
+ 
